# Anthropic-Bridge

./: .env.example  .gitignore  PROJECT.md  README.md  config.py  config_watcher.py  first_word.py  logging_config.py  proxy.config  pyproject.toml  request_logger.py  requirements.txt  router.py  server.py  startup_checks.py  summarize_logs.py  summarizer.toml  token_stats.py
converters/: anthropic_openai.py
handlers/: anthropic.py  base.py  ollama.py  openai.py
scripts/: start-service.ps1  start-service.sh  stop-service.ps1  stop-service.sh
tests/: conftest.py  test_anthropic_live.py  test_config_watcher.py  test_converters.py  test_ollama_failover.py  test_request_logger.py  test_router.py
