[project]
name = "anthropic-bridge"
version = "0.1.0"
description = "Route Anthropic-format requests to Anthropic API or local Ollama models — use any mix of cloud and local models in Claude Code subagents"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "tomli; python_version < '3.11'",
]

[project.scripts]
anthropic-bridge = "server:main"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["*.py"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
